# proxy-hunter

./: .gitignore  LICENSE  README.md  README_ZH.md  final_verify.py  generate_channel_reports.py  geonode_hunt.py  pyproject.toml  quick_hunt.py  requirements.txt
_deprecated/: README.md  proxy_hunter.py  run.sh  test_proxies.py
_deprecated/results/: final_premium.txt  final_verified.json  report_20260703_104913.json  report_20260703_104913.md
proxy_hunter/: __init__.py  loader.py  pool.py
results/: ALL_PREMIUM.txt  ALL_WORKING.json  BEST_FOR_CRAWLING.txt  FINAL_REPORT.md  PREMIUM_VERIFIED.json  quick_working.json  quick_working.txt
results/channels/: 00-总览.md  geonode_hunt-Geonode_API_elite,_google,_uptime>=80,_latency<=500.md  geonode_hunt-GitHub_jetkai_http.md  geonode_hunt-GitHub_monosans_http.md  geonode_hunt-ShiftyTR.md  geonode_hunt-geonode.md  geonode_hunt-jetkai.md  geonode_hunt-monosans.md  geonode_hunt-总览.md  quick_hunt-Geonode_API_elite,_google,_uptime>=80,_latency<=500.md  quick_hunt-GitHub_jetkai_http.md  quick_hunt-GitHub_monosans_http.md  quick_hunt-总览.md  优质代理-真实站点验证.md  作废-初轮-Geonode_API.md  作废-初轮-GitHub_iplocate-free-proxy-list.md  作废-初轮-GitHub_proxifly-free-proxy-list.md  作废-初轮-ProxyScrape_API_HTTP.md  作废-初轮-ProxyScrape_API_SOCKS5.md  作废-初轮-Tor_local_SOCKS5.md  作废-初轮-free-proxy-list.net.md  作废-初轮-free-proxy_PyPI_library.md  作废-初轮-proxyscrape_PyPI_library.md
source_tests/: README.md  bootstrap_sources.py  common.py  run_all.py  run_one.py
source_tests/results/: 00_RANKING.json  00_RANKING.md  ErcinDedeoglu_http.json  ErcinDedeoglu_http.md  (+76 more)
(+39 files in other folders)
